Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132357

setSelectedColor doesn't work on barsets added to QBarSeries with insert method

XMLWordPrintable

    • macOS
    • 406effc62 (dev), 720060d9a (6.10), 2c974ec4e (6.9), f3df7f137 (tqtc/lts-6.8), 7ecaeb43f (tqtc/lts-6.5)

      Selection color doesn't work for barsets added to QBarSeries with insert method. Instead of insert, if I use QBarSeries::append then selection color reflects as expected. Note: It happens for both C++ and Python APIs.

      Using insert :

      Screen Recording 2024-12-19 at 3.47.51 PM.mov

      Using append insted of insert (rest of the script is same) : 

      Screen Recording 2024-12-19 at 3.48.37 PM.mov

      Attaching the python script.

      qt_bug_chart.py

       

      You can also find c++ implementation : cpp_sample_code.cxx

        1. cpp_sample_code.cxx
          2 kB
          Soham Kanji
        2. qt_bug_chart.py
          1 kB
          Soham Kanji
        3. Screen Recording 2024-12-19 at 3.47.51 PM.mov
          276 kB
          Soham Kanji
        4. Screen Recording 2024-12-19 at 3.48.37 PM.mov
          223 kB
          Soham Kanji
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            sohamkanji Soham Kanji
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes