Fix a typo in QAbstractBarSeriesPrivate::insert()

Apparently, a copy-paste error, which lead to selectedBarsChanged()
signal never being handled properly.

Amends 1a0063ed1523ca7511e1801957c377b5bf40af27.

Fixes: QTBUG-132357
Pick-to: 6.9 6.8 6.5
Change-Id: I7f305dbb7af1daadc8abf687b0dacbd0dbf3a603
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
(cherry picked from commit 406effc62469f9dc44a583db9fa06fb88e0f3f71)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>